@startuml

class ViewResultsUI{
}

class ViewResultsController{
+sortedDateList()
+getResult()

}

class TestStore{
-List<Test> array;
-List<String> testSortedListString;
+sortedDateList()
}

class Test{
-String clientTin;
-Report report;
}

class Company{
-ClientStore clientList;
-TestStore testList;
+getUserID()

}

class UserSession{
+getId()
}

class User{
-Email id;
}

class ClientStore{
-List<Client> array
+getClientByEmail()
}

class Client{
-String tinNumber;
+getTinNumber()
}

ViewResultsUI ..> ViewResultsController
ViewResultsController ..> Company
Company .> UserSession
UserSession ..> User
Company --> ClientStore
Company -->TestStore
ClientStore --> Client
TestStore --> Test


@enduml